tests/baselines/reference/deduplicateImportsInSystem.errors.txt
tests/cases/compiler/deduplicateImportsInSystem.ts(1,17): error TS2307: Cannot find module 'f1'.
tests/cases/compiler/deduplicateImportsInSystem.ts(2,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.ts(3,17): error TS2307: Cannot find module 'f3'.
tests/cases/compiler/deduplicateImportsInSystem.ts(4,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.ts(5,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.ts(6,17): error TS2307: Cannot find module 'f1'.


==== tests/cases/compiler/deduplicateImportsInSystem.ts (6 errors) ====
    import {A} from "f1";
                    ~~~~
!!! error TS2307: Cannot find module 'f1'.
    import {B} from "f2";
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {C} from "f3";
                    ~~~~
!!! error TS2307: Cannot find module 'f3'.
    import {D} from 'f2';
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {E} from "f2";
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {F} from 'f1';
                    ~~~~
!!! error TS2307: Cannot find module 'f1'.
    
    console.log(A + B + C + D + E + F)